syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "WorkEffortOpsProto";

package facade;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "routines.proto";
import "facade_common.proto";


import "ents/workeffort_workeffort.proto";
import "types/work_effort_type.proto";
import "extra/workeffort_workeffort.proto";

service WorkEffortOperations {
  rpc CreateWorkEffort(CreateWorkEffortParams) returns (domain.WorkEffortFlatData) {}
  rpc UpdateWorkEffort(UpdateWorkEffortParams) returns (domain.WorkEffortFlatData) {}
  rpc GetWorkEffort(BundleGetRequest) returns (domain.WorkEffortFlatData) {}

  
  rpc AddWorkEffortFixedAssetAssign(AddWorkEffortFixedAssetAssignParams) returns (routines.Response) {}
  rpc UpdateWorkEffortFixedAssetAssign(UpdateWorkEffortFixedAssetAssignParams) returns (routines.Response) {}
  rpc RemoveWorkEffortFixedAssetAssign(RemoveWorkEffortFixedAssetAssignParams) returns (routines.Response) {}
  
  rpc AddWorkEffortSkillStandard(AddWorkEffortSkillStandardParams) returns (routines.Response) {}
  rpc UpdateWorkEffortSkillStandard(UpdateWorkEffortSkillStandardParams) returns (routines.Response) {}
  rpc RemoveWorkEffortSkillStandard(RemoveWorkEffortSkillStandardParams) returns (routines.Response) {}
  
  rpc AddWorkEffortPartyAssignment(AddWorkEffortPartyAssignmentParams) returns (routines.Response) {}
  rpc UpdateWorkEffortPartyAssignment(UpdateWorkEffortPartyAssignmentParams) returns (routines.Response) {}
  rpc RemoveWorkEffortPartyAssignment(RemoveWorkEffortPartyAssignmentParams) returns (routines.Response) {}
  
  rpc AddWorkEffortStatus(AddWorkEffortStatusParams) returns (routines.Response) {}
  rpc UpdateWorkEffortStatus(UpdateWorkEffortStatusParams) returns (routines.Response) {}
  rpc RemoveWorkEffortStatus(RemoveWorkEffortStatusParams) returns (routines.Response) {}
  
  rpc AddFromWorkEffortAssoc(AddFromWorkEffortAssocParams) returns (routines.Response) {}
  rpc UpdateFromWorkEffortAssoc(UpdateFromWorkEffortAssocParams) returns (routines.Response) {}
  rpc RemoveFromWorkEffortAssoc(RemoveFromWorkEffortAssocParams) returns (routines.Response) {}
  
  rpc AddToWorkEffortAssoc(AddToWorkEffortAssocParams) returns (routines.Response) {}
  rpc UpdateToWorkEffortAssoc(UpdateToWorkEffortAssocParams) returns (routines.Response) {}
  rpc RemoveToWorkEffortAssoc(RemoveToWorkEffortAssocParams) returns (routines.Response) {}
  

  // -- relations: one --
  rpc ModifyWorkEffortType(ModifyWorkEffortTypeParams) returns (routines.Response) {}

  // -- extensions --
  

    // -- query --
  rpc QueryAll(BundleHandle) returns (domain.WorkEffortList) {}
  rpc QueryIds(BundleHandle) returns (routines.Strings) {}
  rpc QueryList(BundleQueryMap) returns (domain.WorkEffortList) {}
  rpc QueryOne(BundleQueryMap) returns (domain.WorkEffortFlatData) {}
  rpc Select(BundleHandle) returns (domain.WorkEffortList) {}

  rpc ListWorkEfforts(BundleListRequest) returns (domain.WorkEffortList) {}
  rpc LoadWorkEfforts(BundleIdsRequest) returns (domain.WorkEffortList) {}
  rpc StreamWorkEfforts(BundleListRequest) returns (stream domain.WorkEffortList) {}
  rpc RemoveWorkEffort(BundleDeleteRequest) returns (routines.Response) {}
}


// Mutations for main entity

message CreateWorkEffortParams{
  BundleHandle handle = 1;
  domain.WorkEffortFlatData workEffort = 2;
  string comment = 3;
}

message UpdateWorkEffortParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortFlatData workEffort = 3;
  string comment = 4;
}


// Mutations for WorkEffortFixedAssetAssign

message AddWorkEffortFixedAssetAssignParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortFixedAssetAssignData data = 3;
  string comment = 4;
}

message UpdateWorkEffortFixedAssetAssignParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortFixedAssetAssignData data = 3;
  string comment = 4;
}

message RemoveWorkEffortFixedAssetAssignParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for WorkEffortSkillStandard

message AddWorkEffortSkillStandardParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortSkillStandardData data = 3;
  string comment = 4;
}

message UpdateWorkEffortSkillStandardParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortSkillStandardData data = 3;
  string comment = 4;
}

message RemoveWorkEffortSkillStandardParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for WorkEffortPartyAssignment

message AddWorkEffortPartyAssignmentParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortPartyAssignmentData data = 3;
  string comment = 4;
}

message UpdateWorkEffortPartyAssignmentParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortPartyAssignmentData data = 3;
  string comment = 4;
}

message RemoveWorkEffortPartyAssignmentParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for WorkEffortStatus

message AddWorkEffortStatusParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortStatusData data = 3;
  string comment = 4;
}

message UpdateWorkEffortStatusParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortStatusData data = 3;
  string comment = 4;
}

message RemoveWorkEffortStatusParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for FromWorkEffortAssoc

message AddFromWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortAssocData data = 3;
  string comment = 4;
}

message UpdateFromWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortAssocData data = 3;
  string comment = 4;
}

message RemoveFromWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ToWorkEffortAssoc

message AddToWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortAssocData data = 3;
  string comment = 4;
}

message UpdateToWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortAssocData data = 3;
  string comment = 4;
}

message RemoveToWorkEffortAssocParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for WorkEffortType

message ModifyWorkEffortTypeParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.WorkEffortTypeData data = 3;
  string comment = 4;
}

