syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductCostExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Cost Component
message CostComponentData {
    option (routines.entity_type) = "CostComponent";
    option (routines.keys).keys = "cost_component_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: costComponentId
    // fields
    string cost_component_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string cost_component_type_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    string product_feature_id = 4 [(routines.opts).field_type = "id"];
    string party_id = 5 [(routines.opts).field_type = "id"];
    string geo_id = 6 [(routines.opts).field_type = "id"];
    string work_effort_id = 7 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 8 [(routines.opts).field_type = "id"];
    string cost_component_calc_id = 9 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 11 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint cost = 12 [(routines.opts).field_type = "fixed-point"];
    string cost_uom_id = 13 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    string tenant_id = 16 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 29;
    map<string, google.protobuf.Any> attachments = 30;
}


message CostComponentKey{
    string cost_component_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message CostComponentList{
    repeated CostComponentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCostComponents` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Cost Component Attribute
message CostComponentAttributeData {
    option (routines.entity_type) = "CostComponentAttribute";
    option (routines.keys).keys = "cost_component_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: costComponentId, attrName
    // fields
    string cost_component_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string attr_value = 3 [(routines.opts).field_type = "value"];
    string attr_description = 4 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message CostComponentAttributeKey{
    string cost_component_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message CostComponentAttributeList{
    repeated CostComponentAttributeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCostComponentAttributes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Cost Component Type Attribute
message CostComponentTypeAttrData {
    option (routines.entity_type) = "CostComponentTypeAttr";
    option (routines.keys).keys = "cost_component_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: costComponentTypeId, attrName
    // fields
    string cost_component_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message CostComponentTypeAttrKey{
    string cost_component_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message CostComponentTypeAttrList{
    repeated CostComponentTypeAttrData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCostComponentTypeAttrs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Cost Calculation
message ProductCostComponentCalcData {
    option (routines.entity_type) = "ProductCostComponentCalc";
    option (routines.keys).keys = "product_id, cost_component_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, costComponentTypeId, fromDate
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string cost_component_type_id = 2 [(routines.opts).field_type = "id"];
    string cost_component_calc_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    int64 sequence_num = 5 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp thru_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    string id = 9 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message ProductCostComponentCalcKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string cost_component_type_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message ProductCostComponentCalcList{
    repeated ProductCostComponentCalcData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductCostComponentCalcs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


